# KOReaderIntegration

./: .gitignore  .gitmodules  CMakeLists.txt  Epub.register  EpubExtractor.install  ExampleShitApp.sh  FB2Extractor.install  Install.sh  KoreaderIntegration.install  ShitExtractor.install  Uninstall.sh  device.lua.patch  dist.sh  koreader_helper  koreader_helper.sh  lipc.c  lol.json  readme.md  shit_launcher  strace
.zed/: settings.json  tasks.json
koreader_booklet/com/koreader/: Main.java
rusty_indexer/: Cargo.toml
scanner_ffi/: Cargo.toml
scanner_ffi/src/: lib.rs
src/: main.c
src/daemon/: main.c
src/extractor/: base64.c  main.c  simple_epub_extractor.c  simple_epub_extractor.h  simple_fb2_extractor.c  simple_fb2_extractor.h  simple_sh_extractor.c  simple_sh_extractor.h  utils.c  utils.h
src/extractor/koreader/: main.c
src/koreader/: main.c
src/launcher/: main.c
src/stubs/libxml2/: libxml2.c  libxml2.h
src/stubs/lipc/: lipc.c
src/stubs/scanner/: scanner.c  scanner.h
